--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dann-scraper",
+  "name": "jann-scraper",
   "version": "1.0.0-beta.1",
   "description": "The Library scraper for WhatsApp bot",
   "main": "index.js",
@@ -9,16 +9,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gihub.com/DannOfficial/scraper"
+    "url": "https://gihub.com/JannDevs/scraper"
   },
   "keywords": [
     "api",
     "scrape",
     "scraper",
-    "dann-scraper",
-    "DannTeam"
+    "jann-scraper",
+    "JannDevs"
   ],
-  "author": "DannTeam",
+  "author": "JannDevs",
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "axios": "^1.6.1",
