--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jann-scraper",
-  "version": "0.0.7",
+  "name": "nasir-scraper",
+  "version": "0.0.1",
   "description": "Free Library scraper for Rest Api or WhatsApp bot",
   "main": "index.js",
   "scripts": {
@@ -13,12 +13,12 @@
     "web-scrape",
     "scrape",
     "scraper",
-    "jann-scraper",
+    "nasir-scraper",
     "rest-api",
     "restfull-api"
   ],
   "author": {
-    "name": "JannDevs"
+    "name": "Nasirxml"
   },
   "license": "MIT",
   "dependencies": {
@@ -37,7 +37,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gihub.com/JannDevs/scraper.git"
+    "url": "https://github.com/Nasirhanns/scraper.git"
   },
   "directoies": {
     "lib": "lib",
